# desafio-python-sql-mongo

./: .gitignore  README.md  pyproject.toml
desafio_sqlite_mongo_db/mongo/: __init__.py  app.py
desafio_sqlite_mongo_db/sqlite/: app.py
